--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi "
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "pg": "^7.8.0",
     "pug": "^2.0.3",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "pg": "^7.8.1"
   }
 }
