--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-generator": "^4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "lodash": "^4.17.11",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
