--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi "
+    "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi ",
+    "test": "mocha ./mocha-tests/instant-sauce-mocha-test1.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.4",
@@ -13,6 +14,7 @@
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
@@ -20,12 +22,14 @@
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
     "pg": "^7.8.1"
   }
