--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.2",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
+    "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
