--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^3.0.4",
     "connect-flash": "^0.1.1",
+    "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
     "express": "^4.16.4",
@@ -18,8 +19,6 @@
     "http-errors": "~1.6.2",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
-    "mysql": "^2.16.0",
-    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
