--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "myapp",
   "version": "0.0.0",
-  "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha ./mocha-tests/*.js"
@@ -27,7 +26,8 @@
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "pg": "^7.9.0"
   },
   "devDependencies": {
     "mocha": "^6.0.2",
