--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "chai": "^4.2.0",
+    "chromedriver": "^2.46.0",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "~1.4.3",
@@ -20,14 +22,14 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pg": "^7.9.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
-    "validator": "^10.11.0",
-    "pg": "^7.9.0"
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "mocha": "^6.0.2",
