--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "zeromq": "^5.1.0",
+    "zerorpc": "^0.9.8"
   },
   "devDependencies": {
     "mocha": "^6.0.2",
