--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
+    "socket.io": "^2.2.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
