--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "bootstrap": "^3.3.7",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "^2.6.9",
@@ -16,6 +17,7 @@
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
+    "jade-bootstrap": "^1.0.14",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
@@ -23,7 +25,7 @@
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
-    "sequelize": "^4.42.0",
+    "sequelize": "^4.43.1",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
     "validator": "^10.11.0"
@@ -31,6 +33,6 @@
   "devDependencies": {
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
-    "pg": "^7.8.1"
+    "pg": "^7.9.0"
   }
 }
