--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "express-generator": "^4.16.0",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.2",
     "lodash": "^4.17.11",
-    "mkdirp": "^0.5.1",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
