--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "fs": "0.0.1-security",
+    "gravatar": "^1.8.0",
     "http-errors": "~1.6.2",
     "lodash": "^4.17.11",
     "morgan": "~1.9.0",
@@ -31,6 +32,7 @@
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
+    "socket.io": "^2.2.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
