--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
     "socket.io": "^2.2.0",
-    "validator": "^10.11.0",
-    "zeromq": "^5.1.0",
-    "zerorpc": "^0.9.8"
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "mocha": "^6.1.2",
