--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
-    "sequelize": "^4.42.0",
+    "sequelize": ">=5.3.0",
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
     "socket.io": "^2.2.0",
