--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "bs-stepper": "^1.5.0",
     "chai": "^4.2.0",
     "chromedriver": "^2.46.0",
     "connect-flash": "^0.1.1",
