--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sequelize-cli": "^5.4.0",
     "sequelizer": "^1.1.3",
     "socket.io": "^2.2.0",
+    "twilio": "^3.30.1",
     "validator": "^10.11.0"
   },
   "devDependencies": {
